# fast-api-base

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  hypercorn.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: format-check.yml  test-check.yml
db/: docker-compose.yml
src/config/: settings.py
src/docs/: swagger.py
src/docs/health/: description.py
src/docs/secure/: description.py
src/infra/auth/: decorators.py
src/infra/database/: create_db.py  db.py  session.py
src/infra/database/migrations/: env.py
src/infra/database/migrations/versions/: d2f73a02762b_create_users_table.py
src/infra/middleware/logs/: config.py  logger.py  request.py
src/interfaces/: base_routes.py  base_services.py
src/models/: user.py
src/resources/: __init__.py  health.py  secure.py  user.py
src/routes/: __init__.py  health.py  secure.py  user.py
src/schemas/: health.py  secure.py  user.py
src/services/: __init__.py  user.py
src/utils/: token.py
